; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_cookie.c_Curl_cookie_list.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_cookie.c_Curl_cookie_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.curl_slist = type { i32 }
%struct.Curl_easy = type { i32 }

@CURL_LOCK_DATA_COOKIE = common dso_local global i32 0, align 4
@CURL_LOCK_ACCESS_SINGLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.curl_slist* @Curl_cookie_list(%struct.Curl_easy* %0) #0 {
  %2 = alloca %struct.Curl_easy*, align 8
  %3 = alloca %struct.curl_slist*, align 8
  store %struct.Curl_easy* %0, %struct.Curl_easy** %2, align 8
  %4 = load %struct.Curl_easy*, %struct.Curl_easy** %2, align 8
  %5 = load i32, i32* @CURL_LOCK_DATA_COOKIE, align 4
  %6 = load i32, i32* @CURL_LOCK_ACCESS_SINGLE, align 4
  %7 = call i32 @Curl_share_lock(%struct.Curl_easy* %4, i32 %5, i32 %6)
  %8 = load %struct.Curl_easy*, %struct.Curl_easy** %2, align 8
  %9 = call %struct.curl_slist* @cookie_list(%struct.Curl_easy* %8)
  store %struct.curl_slist* %9, %struct.curl_slist** %3, align 8
  %10 = load %struct.Curl_easy*, %struct.Curl_easy** %2, align 8
  %11 = load i32, i32* @CURL_LOCK_DATA_COOKIE, align 4
  %12 = call i32 @Curl_share_unlock(%struct.Curl_easy* %10, i32 %11)
  %13 = load %struct.curl_slist*, %struct.curl_slist** %3, align 8
  ret %struct.curl_slist* %13
}

declare dso_local i32 @Curl_share_lock(%struct.Curl_easy*, i32, i32) #1

declare dso_local %struct.curl_slist* @cookie_list(%struct.Curl_easy*) #1

declare dso_local i32 @Curl_share_unlock(%struct.Curl_easy*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
